<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.appindicadores.app.example.appindicadores.activities.Indicador_Activity">
    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="100"
        android:title="@string/item_main"
        app:showAsAction="always">
        <menu>
        <item
            android:id="@+id/id_item_information2"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/item_information"
            app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/id_item_descarga_imagen"
                android:icon="@drawable/ic_insert_chart_24_black"
                android:title="@string/item_imagen"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/id_item_descarga_excel"
                android:icon="@drawable/ic_cloud_download_24_black"
                android:title="@string/item_excel"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/id_item_mostrar_data"
                android:icon="@drawable/ic_equalizer"
                android:title="Mostrar/Ocultar"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>
